--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm learning how to code</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Australia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Watching movies and TV shows and going for long walks</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Trying to figure that out</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Australia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I think web development skills are valuable in the increasingly digital business environment</p>
     </section>
 
     <footer id="footer">
